--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gcboard",
   "version": "0.1.0",
-  "homepage": "http://GCnomore.github.io/gcboard",
+  "homepage": "https://gcnomore.github.io/gcboard",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
