--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
-    "babel-cli": "^6.26.0",
+    "babel-cli": "^6.18.0",
+    "chokidar": "^3.5.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
