--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,15 +10,15 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2.3.1
         with:
-          persist-credentials: false 
+          persist-credentials: false
 
       - name: Install and Build 🔧
         run: |
           npm install
-          npm run-script build
-        env: 
+          npm run build
+        env:
           REACT_APP_NEWS_API_KEY: ${{ secrets.REACT_APP_NEWS_API_KEY }}
-          REACT_APP_WEATHER_API_KEY: ${{ secrets.REACT_APP_WEATHER_API_KEY }}          
+          REACT_APP_WEATHER_API_KEY: ${{ secrets.REACT_APP_WEATHER_API_KEY }}
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@4.1.0
