--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "axios": "^0.21.1",
     "babel-cli": "^6.18.0",
     "chokidar": "^3.5.1",
+    "immutability-helper": "^3.1.1",
     "react": "^17.0.1",
+    "react-dnd": "^14.0.2",
+    "react-dnd-html5-backend": "^14.0.0",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
     "styled-components": "^5.2.1",
